[package]
name = "sustlog"
version = "0.2.1"
authors = ["Erik Craddock <erik@erikvancraddock.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sustl"
path = "src/lib/lib.rs"

[[bin]]
name = "sust"
path = "src/main.rs"

[dependencies]
config = { version = "0.9" }
dirs = "2.0"
toduit = { version = "0.1.10", path = "../toduit" }
structopt = { version = "0.3", default-features = false }
serde = { version = "^1.0.60", features = ["derive"] }
serde_derive = "1.0.104"
serde_yaml = "0.8.11"
uuid = { version = "0.4", features = ["serde", "v4"] }
chrono = "0.4"
